--- a/static/css/app.css
+++ b/static/css/app.css
@@ -259,3 +259,17 @@ input:checked + .slider:after
     margin-left: calc(-.5em - 1px);
     margin-right: .25em;
 }
+
+.backButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
